# bugbug

./: requirements.txt  test-requirements.txt
bugbug/: vectordb.py
bugbug/tools/: code_review.py
bugbug/tools/code_review/: agent.py
bugbug/tools/patch_summarization/: agent.py
mcp/: pyproject.toml
